@startuml Clases

class Mundo{
    +Habitacion[] habitaciones

    void Empezar()
}


class Habitacion {
    +Baldosa[][] baldosas
    +Gato[] gatos
    +int largo
    +int ancho

    Habitacion(largo, ancho)

    void AvanzaDia()
    void ImprimirHabitacion()
}

class Baldosa {
    +int nivelSuciedad
    +bool ocupada

    void Ensuciar()
    bool HayUnGato()
}


class Gato {
    int DondeQuieresMoverte()
    bool VasAEnsuciar()
}

Mundo *-- Habitacion
Habitacion *-- Baldosa
Habitacion *-- Gato
Baldosa .r. Gato




@enduml